# whtsappfrappe

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/release-notes/: v0.3.0.md
frontend/: package.json  vite.config.js
frontend/src/: App.vue  index.css  main.js  router.js
frontend/src/lib/: api.js  i18n.js  notify.js
frontend/src/pages/: ChatsPage.vue  OverviewPage.vue  SettingsPage.vue
whatapp/: api.py  delivery.py  hooks.py  hrms_events.py  issue_events.py  local_service.py  local_service_runner.py  modules.txt  notification_forwarding.py  recipient_resolver.py  setup.py  user_delivery.py
whatapp/public/js/: whatapp_recipient_actions.js
whatapp/tests/: __init__.py  test_issue_events.py  test_recipient_resolver.py
whatapp/utils/: service.py
whatapp/whatapp/: __init__.py
whatapp/whatapp/doctype/: __init__.py
whatapp/whatapp/doctype/whatapp_message_log/: __init__.py  whatapp_message_log.json  whatapp_message_log.py
whatapp/whatapp/doctype/whatapp_settings/: __init__.py  whatapp_settings.json  whatapp_settings.py
whatapp/whatapp/doctype/whatapp_user_notification_setting/: whatapp_user_notification_setting.json  whatapp_user_notification_setting.py
whatapp/whatapp/doctype/whatapp_webhook_log/: __init__.py  whatapp_webhook_log.json  whatapp_webhook_log.py
whatapp/whatapp/page/: __init__.py
whatapp/whatapp/page/whatapp/: __init__.py  whatapp.js  whatapp.json
